Added . to  assets

--- a/index.html
+++ b/index.html
@@ -149,18 +149,18 @@
         <div data-aos="fade-up" data-aos-once="true" class="wrapper">
           <h2>My Toolkit 💻</h2>
           <ul class="skills">
-            <li><img src="/assets/Icons/html-5.svg" alt="HTML5" />HTML5</li>
-            <li><img src="/assets/Icons/css-3.svg" alt="CSS3" />CSS3</li>
-            <li><img src="/assets/Icons/javascript.svg" alt="JavaScript" />Javascript</li>
-            <li><img src="/assets/Icons/java.svg" alt="Java" />Java</li>
-            <li><img src="/assets/Icons/bootstrap.svg" alt="Bootstrap" />Bootstrap</li>
-            <li><img src="/assets/Icons/react.svg" alt="React.js" />React.js</li>
-            <li><img src="/assets/Icons/mysql.svg" alt="MySQL" />MySQL</li>
+            <li><img src="./assets/Icons/html-5.svg" alt="HTML5" />HTML5</li>
+            <li><img src="./assets/Icons/css-3.svg" alt="CSS3" />CSS3</li>
+            <li><img src="./assets/Icons/javascript.svg" alt="JavaScript" />Javascript</li>
+            <li><img src="./assets/Icons/java.svg" alt="Java" />Java</li>
+            <li><img src="./assets/Icons/bootstrap.svg" alt="Bootstrap" />Bootstrap</li>
+            <li><img src="./assets/Icons/react.svg" alt="React.js" />React.js</li>
+            <li><img src="./assets/Icons/mysql.svg" alt="MySQL" />MySQL</li>
             <li>
-              <img src="/assets/Icons/spring-icon.svg" alt="Spring Boot" />Spring Boot
+              <img src="./assets/Icons/spring-icon.svg" alt="Spring Boot" />Spring Boot
             </li>
-            <li><img src="/assets/Icons/nodejs.svg" alt="node.js" />node.js</li>
-            <li><img src="/assets/Icons/postman.svg" alt="Postman" />Postman</li>
+            <li><img src="./assets/Icons/nodejs.svg" alt="node.js" />node.js</li>
+            <li><img src="./assets/Icons/postman.svg" alt="Postman" />Postman</li>
           </ul>
         </div>
         <!-- End of Toolkit -->
