Modified styles and index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <ul class="menu">
           <li><a href="#projects">Projects</a></li>
           <li><a href="#aboutMe">About</a></li>
-          <li><a href="#contactMe">Contact</a></li>
         </ul>
       </nav>
 
@@ -57,7 +56,7 @@
             </video>
             <div class="overlay">
               <h3>Root Squad Social Plant App (WIP)</h3>
-              <p>A plant app</p>
+              <p>A work-in-progress plant-focused social media app where users can share care tips, connect with a community, and post updates about their plants. Features include a search bar with filters, dropdown-based selections, and dynamic content updates</p>
               <ul class="toolsUsed">
                 <li>HTML</li>
                 <li>CSS</li>
@@ -68,8 +67,7 @@
                 <li>Postman</li>
               </ul>
               <div class="viewProject">
-                <a href="https://zoooriiel.github.io/MyAnimeLibrary/" target="_blank" class="button">View Live</a>
-                <a href="https://github.com/Zoooriiel/MyAnimeLibrary" target="_blank" class="button">GitHub</a>
+                <a href="" target="_blank" class="button">Project will be live on Feb 12~</a>
               </div>
             </div>
           </div>
@@ -82,15 +80,15 @@
             </video>
             <div class="overlay">
               <h3>Anime Library</h3>
-              <p>A personal anime library built using HTML, CSS, and JavaScript. This ongoing project currently tracks anime titles and progress. Future plans include integrating a database to allow for dynamic updates and storage.</p>
+              <p>A personal anime tracking app that lets users organize and monitor their anime titles and viewing progress. Upcoming enhancements include integrating a backend database for dynamic updates, storage, and improved functionality.</p>
               <ul class="toolsUsed">
                 <li>HTML5</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
               </ul>
               <div class="viewProject">
-                <a href="https://example.com" target="_blank" class="button">View Live</a>
-                <a href="https://github.com/example" target="_blank" class="button">GitHub</a>
+                <a href="https://zoooriiel.github.io/MyAnimeLibrary/" target="_blank" class="button">View Live</a>
+                <a href="https://github.com/Zoooriiel/MyAnimeLibrary" target="_blank" class="button">GitHub</a>
               </div>
             </div>
           </div>
@@ -103,14 +101,12 @@
             </video>
             <div class="overlay">
               <h3>Student Registration App</h3>
-              <p>A student registration app on terminal.</p>
+              <p>A terminal-based app for teachers to register students, assign courses, and manage grades. Built using object-oriented principles, it handles student data dynamically with collections, ensures input validation, and includes features like performance tracking and grade updates.</p>
               <ul class="toolsUsed">
-                <li>HTML5</li>
                 <li>Java</li>
               </ul>
               <div class="viewProject">
-                <a href="https://example.com" target="_blank" class="button">View Live</a>
-                <a href="https://github.com/example" target="_blank" class="button">GitHub</a>
+                <a href="https://github.com/Zoooriiel/Student_Registration_App" target="_blank" class="button">GitHub</a>
               </div>
             </div>
           </div>
@@ -123,15 +119,13 @@
             </video>
             <div class="overlay">
               <h3>Find Your Hat</h3>
-              <p>Terminal Game</p>
+              <p>A terminal-based adventure game where players navigate through a grid to find their lost hat while avoiding obstacles like holes. JavaScript for implementing game logic, input handling, and random terrain generation. Node.js to enable terminal-based gameplay and handle user inputs efficiently.</p>
               <ul class="toolsUsed">
-                <li>HTML5</li>
                 <li>JavaScript</li>
                 <li>node.js</li>
               </ul>
               <div class="viewProject">
-                <a href="https://example.com" target="_blank" class="button">View Live</a>
-                <a href="https://github.com/example" target="_blank" class="button">GitHub</a>
+                <a href="https://github.com/Zoooriiel/Find-Your-Hat-Project" target="_blank" class="button">GitHub</a>
               </div>
             </div>
           </div>
@@ -143,7 +137,7 @@
       <!-- End of Portfolio Section -->
 
       <!-- Start of Tech Stack and About Me -->
-      <section class="aboutMeSkills" id="aboutMe">
+      <section class="aboutMeSkills" id="">
 
         <!-- Start of Toolkit -->
         <div data-aos="fade-up" data-aos-once="true" class="wrapper">
@@ -166,7 +160,7 @@
         <!-- End of Toolkit -->
          </section>
 
-         <section class="aboutMe" id="">
+         <section class="aboutMe" id="aboutMe">
           <!-- Start of About Me -->
         <div class="wrapper" data-aos="fade-up" data-aos-once="true">
           <div class="aboutMeTop">
@@ -193,26 +187,12 @@
         <!-- End of About Me -->
          </section>
 
-         <section class="contactMeSection" id="contactMe" data-aos="fade-up" data-aos-once="true">
-        <div class="wrapper" data-aos="fade-up" data-aos-once="true">
-          <div class="contactMeTop">
-            <h2>Contact Me</h2>
-            <p id="firstp">I’d love to work with you!</p>
-            <p>For collaboration or job opportunities, please reach out here:</p>
-            <div class="contact-icons">
-              <a href="mailto:zoooriiel@gmail.com" title="Email Me" target="_blank" rel="noopener noreferrer">
-                Email
-              </a>
-              <a href="https://github.com/Zoooriiel" title="GitHub Profile" target="_blank" rel="noopener noreferrer">
-                GitHub
-              </a>
-              <a href="assets/LimHweeHianGina Resume.pdf" title="Download my Resume" target="_blank" rel="noopener noreferrer">
-                Resume
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
+<footer>
+  <a href="https://github.com/Zoooriiel" target="_blank" title="GitHub">GitHub</a>
+  <a href="./assets/LimHweeHianGina Resume.pdf" target="_blank" title="Resume">Resume</a>
+  <a href="mailto:zoooriiel@gmail.com" title="Email">Email</a>
+  <a href="https://www.linkedin.com/in/gina-l-hh">LinkedIn</a>
+</footer>
           
 
         
