--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 <footer>
   <a href="https://github.com/Zoooriiel" target="_blank" title="GitHub">GitHub</a>
-  <a href="./assets/LimHweeHianGina Resume.pdf" target="_blank" title="Resume">Resume</a>
+  <a href="./assets/LimHweeHianGina_Resume.pdf" target="_blank" title="Resume">Resume</a>
   <a href="mailto:zoooriiel@gmail.com" title="Email">Email</a>
   <a href="https://www.linkedin.com/in/gina-l-hh">LinkedIn</a>
 </footer>
