Added TypeIt project

--- a/index.html
+++ b/index.html
@@ -52,22 +52,19 @@
           <!-- Project 1 -->
           <div class="project" data-aos="fade-right" data-aos-once="true">
             <video autoplay loop muted playsinline>
-              <source src="assets/Root Squad Plant App WIP.mp4" type="video/mp4" />
+              <source src="assets/TypeIt.mp4" type="video/mp4" />
             </video>
             <div class="overlay">
-              <h3>Root Squad Social Plant App (WIP)</h3>
-              <p>A work-in-progress plant-focused social media app where users can share care tips, connect with a community, and post updates about their plants. Features include a search bar with filters, dropdown-based selections, and dynamic content updates</p>
+              <h3>TypeIt</h3>
+              <p>This speed typing test is a web-based tool designed to help users improve their typing speed and accuracy. It provides a real-time assessment of typing performance, including words per minute (WPM) and accuracy percentage. </p>
               <ul class="toolsUsed">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
-                <li>Bootstrap</li>
-                <li>MySQL</li>
-                <li>Java</li>
-                <li>Postman</li>
               </ul>
               <div class="viewProject">
-                <a href="" target="_blank" class="button">Project will be live on Feb 12~</a>
+                <a href="https://zoooriiel.github.io/TypeIt/" target="_blank" class="button">View Live</a>
+                <a href="https://github.com/Zoooriiel/TypeIt" target="_blank" class="button">GitHub</a>
               </div>
             </div>
           </div>
