Added spotify react project

--- a/index.html
+++ b/index.html
@@ -49,7 +49,56 @@
       <section class="portfolioProjects" id="projects" data-aos="fade-up" data-aos-once="true">
         <!-- Projects Wrapper -->
         <div class=" projectswrapper">
-          <!-- Project 1 -->
+           <!-- Project 1 -->
+           <div class="project" data-aos="fade-right" data-aos-once="true">
+            <video autoplay loop muted playsinline>
+              <source src="assets/Rootsquad.mp4" type="video/mp4" />
+            </video>
+            <div class="overlay">
+              <h3>RootSquad</h3>
+              <p>RootSquad is a plant social media platform that connects people who love house plants, where you can share tips, plant stories, and meet new plant enthusiasts.</p>
+              <ul class="toolsUsed">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Java</li>
+                <li>Bootstrap</li>
+                <li>Spring Boot</li>
+                <li>MySQL</li>
+                <li>Postman</li>
+              </ul>
+              <div class="viewProject">
+                <a href="https://drive.google.com/file/d/1Ki7R8Rv4GGc54ZqbCHiqXPjMWhn9Tzgr/view?usp=sharing" target="_blank" class="button">Watch the live demo!</a>
+                <a href="https://github.com/Zoooriiel/RootSquad" target="_blank" class="button">GitHub Frontend</a>
+                <a href="https://github.com/ChanJESG/RootSquad-Backend" target="_blank" class="button">GitHub Backend</a>
+              </div>
+            </div>
+          </div>
+          <!-- End of Project 1 -->
+
+          <!-- Project 2 -->
+          <div class="project" data-aos="fade-right" data-aos-once="true">
+            <video autoplay loop muted playsinline>
+              <source src="assets/ReactSpotify.mp4" type="video/mp4" />
+            </video>
+            <div class="overlay">
+              <h3>React Spotify App</h3>
+              <p>A React app built using the Spotify API that fetches and displays music data, allowing users to create and save playlists to their personal Spotify account.</p>
+              <ul class="toolsUsed">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+              </ul>
+              <div class="viewProject">
+                <a href="https://finicky-react-spotify.surge.sh/" target="_blank" class="button">View Live</a>
+                <a href="https://github.com/Zoooriiel/react-spotify" target="_blank" class="button">GitHub</a>
+              </div>
+            </div>
+          </div>
+          <!-- End of Project 2 -->
+
+          <!-- Project 3 -->
           <div class="project" data-aos="fade-right" data-aos-once="true">
             <video autoplay loop muted playsinline>
               <source src="assets/TypeIt.mp4" type="video/mp4" />
@@ -68,18 +117,18 @@
               </div>
             </div>
           </div>
-          <!-- End of Project 1 -->
+          <!-- End of Project 3 -->
 
-          <!-- Project 2 -->
-          <div class="project"  id="project2" data-aos="fade-left" data-aos-once="true">
+           <!-- Project 4 -->
+           <div class="project" id="project3" data-aos="fade-left" data-aos-once="true">
             <video autoplay loop muted playsinline>
               <source src="assets/My Anime Library.mp4" type="video/mp4" />
             </video>
             <div class="overlay">
-              <h3>Anime Library</h3>
-              <p>A personal anime tracking app that lets users organize and monitor their anime titles and viewing progress. Upcoming enhancements include integrating a backend database for dynamic updates, storage, and improved functionality.</p>
+              <h3>My Animal Library</h3>
+              <p>My Anime Library, created using HTML, CSS, and JavaScript, lets users add anime to their list with details like title, status, completion date, and episodes watched.</p>
               <ul class="toolsUsed">
-                <li>HTML5</li>
+                <li>HTML</li>
                 <li>CSS</li>
                 <li>JavaScript</li>
               </ul>
@@ -89,9 +138,9 @@
               </div>
             </div>
           </div>
-          <!-- End of project 2 -->
+          <!-- End of Project 4 -->
 
-          <!-- Project 3 -->
+          <!-- Project 5 -->
           <div class="project" id="project3" data-aos="fade-left" data-aos-once="true">
             <video autoplay loop muted playsinline>
               <source src="assets/Student Registration App.mp4" type="video/mp4" />
@@ -107,9 +156,9 @@
               </div>
             </div>
           </div>
-          <!-- End of Project 3 -->
+          <!-- End of Project 5 -->
 
-          <!-- Project 4 -->
+          <!-- Project 6 -->
           <div class="project" id="project4" data-aos="fade-left" data-aos-once="true">
             <video autoplay loop muted playsinline>
               <source src="assets/Find Your Hat Game.mp4" type="video/mp4" />
@@ -126,7 +175,7 @@
               </div>
             </div>
           </div>
-          <!-- End of Project 4 -->
+          <!-- End of Project 6 -->
 
         </div>
       </section>
